--- a/Thach_Pham/bai 17-position.html
+++ b/Thach_Pham/bai 17-position.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="relative">
-    <img src="https://cdn-images-1.medium.com/max/1200/1*eXIBeNlLhz4Pe6vDrYkXLQ.png" width="100px" height="100px">
+    <img src="https://cdn-images-1.medium.com/max/1200/1*eXIBeNlLhz4Pe6vDrYkXLQ.png" width="100px" height="100px" alt="tung">
     <p>Tôi dùng iphone cũng lâu rồi, cứ mỗi lần iphone ra một cái mới tôi lại đổi,
      thế là trong máy tính có phần ảnh mang tên iphone(number)backup. Tôi lạc mất
      một folder của cái iphone 6s plus, tự dưng hôm nay lẩn thẩn tìm thấy, thế là
