--- a/Thach_Pham/bai 19-dropdown ngang.html
+++ b/Thach_Pham/bai 19-dropdown ngang.html
@@ -21,7 +21,7 @@
     }
     #menu ul li {
         color: aliceblue;
-        display: inline-table;
+        display: inline-block;
         width: 120px;
         height: 40px;
         line-height: 40px;
