--- a/Photoshop-01/index.html
+++ b/Photoshop-01/index.html
@@ -39,6 +39,8 @@
             </div>
         </div>
     </header>
+
+
     <div class="banner">
         <h1>We Are Love <span>Interior</span> Design</h1>
     </div>
@@ -64,22 +66,24 @@
             </div>
         </div>
     </div>
+
+
     <div class="help">
         <div class="container">
             <h1>How can We Help</h1>
             <div class="help-option help-1">
                 <i class="fa fa-calendar" aria-hidden="true"></i>
-                <h3>Planing</h3>
+                <h3><a href="#">Planing</a></h3>
                 <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster</p>
             </div>
             <div class="help-option help-2">
                 <i class="fa fa-home" aria-hidden="true"></i>
-                <h3>Interior Design</h3>
+                <h3><a href=#>Interior Design</a></h3>
                 <p> Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster</p>
             </div>
             <div class="help-option help-3">
                 <i class="fa fa-shopping-basket" aria-hidden="true"></i>
-                <h3>Creative Working</h3>
+                <h3><a href=#>Creative Working</a></h3>
                 <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster</p>
             </div>
         </div>
@@ -91,6 +95,18 @@
                 <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
             </div>
             <img src="images/map.jpg" width="100%" alt="map">
+        </div>
+        <div class="subscribe">
+            <p>Need A Hand In Decoration ? Send Us Your Email</p>
+            <h1>SUBSCRIBE</h1>
+            <div class="content-form">
+                <form action="" name="subcribe" method="post">
+                    <div class="send-email">
+                        <input type="text" name="send-email" value="" placeholder="Enter Your Email Address" />
+                        <input type="submit" name="email-submit" value="submit"/>
+                    </div>
+                </form>
+            </div>
         </div>
         
     </div>
