--- a/Photoshop-01/index.html
+++ b/Photoshop-01/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Nội thất</title>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -115,45 +115,87 @@
     </div>
 
     <div class="bd-example">
-            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h2>What Our Clients Say</h2>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                  </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./images/vtf-004-home-interior-website-template_02.jpg" class="d-block w-100" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                <h2 style="color: black">What Our Clients Say</h2>
+                <img src="./images/vtf-004-home-interior-website-template_03.jpg" alt="" style="border-radius: 50%">
+                <p style="color: darkgrey">Bring to the table win-win survival strategies to ensure proactive domination. 
+                At the end of the day, going forward, a new normal that has evolved from generation 
+                X is on the runway heading towards a streamlined cloud solution. User generated content
+                    in real-time will have multiple </p>
+                <p style="color: coral">Selian melia</p>
+                <p style="color: darkgray">UI designer</p>
                 </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                  </div>
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
             </div>
-          </div>
+            <div class="carousel-item">
+                    <img src="./images/vtf-004-home-interior-website-template_02.jpg" class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 style="color: black">What Our Clients Say</h2>
+                        <img src="./images/vtf-004-home-interior-website-template_03.jpg" alt="" style="border-radius: 50%" >
+                        <p style="color: darkgrey">Bring to the table win-win survival strategies to ensure proactive domination. 
+                        At the end of the day, going forward, a new normal that has evolved from generation 
+                        X is on the runway heading towards a streamlined cloud solution. User generated content
+                        in real-time will have multiple </p>
+                        <p style="color: coral">Selian melia</p>
+                        <p style="color: darkgray">UI designer</p>
+                    </div>
+            </div>
+            <div class="carousel-item">
+                    <img src="./images/vtf-004-home-interior-website-template_02.jpg" class="d-block w-100" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 style="color: black">What Our Clients Say</h2>
+                        <img src="./images/vtf-004-home-interior-website-template_03.jpg" alt="" style="border-radius: 50% " >
+                        <p style="color: darkgrey">Bring to the table win-win survival strategies to ensure proactive domination. 
+                        At the end of the day, going forward, a new normal that has evolved from generation 
+                        X is on the runway heading towards a streamlined cloud solution. User generated content
+                        in real-time will have multiple </p>
+                        <p style="color: coral">Selian melia</p>
+                        <p style="color: darkgray">UI designer</p>
+                    </div>
+            </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+        
+    <div class="project">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="content">
+                        <h1>Our Projects</h1>
+                        <p><span style="color: rgb(255, 115, 0)">Suspendisse magna dui, porta</span><br>
+                        Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.
+                        Override the digital </p>
+                        <a href="#">All Project</a>
+                    </div>
+                    <img src="./images/our-project-1.jpg" alt="" style="box-shadow: 5px 5px 10px #999">
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <img src="./images/our-project-2.jpg" alt="" style="width: 365px; box-shadow: 5px 5px 10px #999">
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <img src="./images/out-project-3.jpg" alt="" style="margin-bottom: 30px; box-shadow: 5px 5px 10px #999" width="315px">
+                    <img src="./images/out-project-4.jpg" alt="" width="315px" style="box-shadow: 5px 5px 10px #999">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="container">
