--- a/Photoshop-01/index.html
+++ b/Photoshop-01/index.html
@@ -27,7 +27,7 @@
                 <div class="col-sm-3 logo">
                     <img src="images/logo.png" alt="logo">
                 </div>
-                <nav class="col-sm-9 main-menu">
+                <nav class="col-lg-9 main-menu">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -45,32 +45,33 @@
         <h1>We Are Love <span>Interior</span> Design</h1>
     </div>
     <div class="intro-first">
-        <div class="row">
-            <div class=" col-sm-6 intro-first-image">
-                <img class="img-intro-1" src="images/intro-1.jpg" alt="intro1">
-                <img class="img-intro-2" src="images/intro2.jpg" alt="intro2">
-                <div class="background-intro"></div>
-            </div>
-            <div class=" col-sm-6 intro-first-content">
-                <h1>You Dream It</h1> 
-                <h1>We Make It</h1>
-                <ul class="intro-menu">
-                    <li><a href="#">Home.</a></li>
-                    <li><a href="#">Office.</a></li>
-                    <li><a href="#">Store.</a></li>
-                </ul>
-                <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
-                Iterative approaches to corporate strategy foster collaborative thinking to further
-                the overall value proposition. Organically grow the holistic world view of disruptive innovation via</p>
-                <div class="read-more"><a href="#">Read More</a></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12 intro-first-image">
+                    <img class="img-intro-1" src="images/intro-1.jpg" alt="intro1">
+                    <img class="img-intro-2" src="images/intro2.jpg" alt="intro2">
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 intro-first-content">
+                    <h1>You Dream It</h1> 
+                    <h1>We Make It</h1>
+                    <ul class="intro-menu">
+                        <li><a href="#">Home.</a></li>
+                        <li><a href="#">Office.</a></li>
+                        <li><a href="#">Store.</a></li>
+                    </ul>
+                    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                    Iterative approaches to corporate strategy foster collaborative thinking to further
+                    the overall value proposition. Organically grow the holistic world view of disruptive innovation via</p>
+                    <div class="read-more"><a href="#">Read More</a></div>
+                </div>
             </div>
         </div>
     </div>
 
 
     <div class="help">
+        <h1>How can We Help</h1>
         <div class="container">
-            <h1>How can We Help</h1>
             <div class="help-option help-1">
                 <i class="fa fa-calendar" aria-hidden="true"></i>
                 <h3><a href="#">Planing</a></h3>
@@ -88,6 +89,7 @@
             </div>
         </div>
     </div>
+
     <div class="main-content">
         <div class="map">
             <div class="describe-map">
@@ -97,23 +99,66 @@
             <img src="images/map.jpg" width="100%" alt="map">
         </div>
         <div class="subscribe">
-            <p>Need A Hand In Decoration ? Send Us Your Email</p>
-            <h1>SUBSCRIBE</h1>
-            <div class="content-form">
-                <form action="" name="subcribe" method="post">
-                    <div class="send-email">
-                        <input type="text" name="send-email" value="" placeholder="Enter Your Email Address" />
-                        <input type="submit" name="email-submit" value="submit"/>
-                    </div>
-                </form>
+            <div class="container">
+                <p>Need A Hand In Decoration ? Send Us Your Email</p>
+                <h1>SUBSCRIBE</h1>
+                <div class="content-form">
+                    <form action="" name="subcribe" method="post">
+                        <div class="send-email">
+                            <input type="text" name="send-email" value="" placeholder="Enter Your Email Address" />
+                            <input type="submit" name="email-submit" value="submit"/>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-        
+        </div>  
     </div>
+
+    <div class="bd-example">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h2>What Our Clients Say</h2>
+                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-7 contact-form">
+                <div class="col-sm-12 col-md-7 contact-form">
                     <div class="content-form">
                         <form name="contact" action="" method="post">
                             <div class="contact-form-row first-row">
@@ -132,7 +177,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-sm-5 contact-info">
+                <div class="col-sm-12 col-md-5 contact-info">
                     <h3>Contacts</h3>
                     <div class="line-contact-info">
                         <h4>Adress</h4>
