--- a/Thach_Pham/bai 13-float-clearfloat.html
+++ b/Thach_Pham/bai 13-float-clearfloat.html
@@ -14,7 +14,7 @@
             overflow: auto;
         }
         #post {
-            background-color: blue;
+            background-color: orange;
             width: 500px;
             height: 300px;
             float: left;
